tests/snapshots/run_wpt_conformance__litert_div_float16_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "div.https.any.js",
    "div float16 2D tensors",
    "litert",
    "PASS",
)
